--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node" : "8.1.1",
-    "npm" : "5.0.3"
+    "node": "8.1.1",
+    "npm": "5.0.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.6.12",
@@ -16,7 +17,10 @@
     "passport-google-oauth20": "^2.0.0"
   },
   "scripts": {
-    "dev": "nodemon index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run client\"  \"npm run server\"",
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false  npm install --prefix client  && npm run build --prefix client",
     "start": "node index.js"
   },
   "author": "",
