--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "8.1.1",
-    "npm": "5.0.3"
+    "node": "12.10.0",
+    "npm": "5.1.0"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -14,13 +14,14 @@
     "mongoose": "^5.6.12",
     "nodeman": "^1.1.2",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "path": "^0.12.7"
   },
   "scripts": {
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run client\"  \"npm run server\"",
-    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false  npm install --prefix client  && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client  && npm run build --prefix client",
     "start": "node index.js"
   },
   "author": "",
