--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mongoose": "^5.6.12",
     "nodeman": "^1.1.2",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "scripts": {
     "server": "nodemon index.js",
