--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "mongoose": "^5.6.12",
     "nodeman": "^1.1.2",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "server": "nodemon index.js",
