--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "express": "^4.17.1",
     "modali": "^1.2.0",
     "mongoose": "^5.6.12",
+    "multer": "^1.4.2",
     "nodeman": "^1.1.2",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "server": "nodemon index.js",
