--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.15",
     "materialize-css": "^1.0.0-rc.2",
     "modali": "^1.2.0",
     "react": "^16.9.0",
@@ -16,6 +18,7 @@
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
     "socket.io-client": "^2.2.0"
   },
