--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "modali": "^1.2.0",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodeman": "^1.1.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
@@ -29,5 +32,8 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "connect-flash": "^0.1.1"
+  }
 }
