--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "12.18.3",
+    "node": "12.18.3"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
