--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-tooltip": "^3.11.1",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
