--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "modali": "^1.2.0",
     "mongoose": "^5.10.3",
     "multer": "^1.4.2",
