--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^1.4.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs-extra": "^9.1.0",
     "modali": "^1.2.0",
