--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run client\"  \"npm run server\"",
-    "build": " npm install --prefix client  && npm run build --prefix client",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client  && npm run build --prefix client",
     "start": "node index.js"
   },
   "author": "",
