--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run client\"  \"npm run server\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client  && npm run build --prefix client",
+    "build": "npm run build",
     "start": "node index.js"
   },
   "author": "",
